test/expected/declare_xvi.out
declare x as consteval int
        ^
9: error: only functions can be "consteval"
